--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -13,6 +13,18 @@ $color-primary-light:  #7ed56f;
 $color-primary-dark: #28b485;
 
 $color-gray: #777;
+$color-gray-light-1: #f7f7f7;
+
 $color-gray-light: #777;
 $color-white: #fff;
 $color-black: #000;
+
+// font
+$default-font-size: 1.6rem;
+
+
+// grid
+
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
