--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -12,13 +12,7 @@ html {
     font-size: 62.5%;
 }
 
-body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    /* font-size: 16px; */
-    line-height: 1.7;
-    color: $color-gray;
-    padding: 3rem;
+box {
     box-sizing: border-box;
-
+    
 }
