--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -2,51 +2,20 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-
 @import "base/base";
 @import "base/animations";
 @import "base/typography";
+@import "base/utilities";
 
 @import "components/button";
+@import "components/composition";
+@import "components/feature-box";
 
 @import "layout/header";
+@import "layout/grid";
 
 @import "pages/home";
 
-.heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-
-    backface-visibility: hidden;
-
-    margin-bottom: 6rem;
-
-     /* blocks, could create line break, before and after them */
-    &--main {
-        display: block;
-        font-size: 6rem;
-        font-weight: 400;
-        letter-spacing: 3.5rem;
-
-        animation-name: moveInLeft;
-        animation-duration: 1s;
-        /* animation-delay: 1s; */
-        /* animation-iteration-count: 3; */
-        animation-timing-function: ease-out;
-    }
-
-    &--sub {
-        display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: 1.75rem;
-
-        animation-name: moveInRight;
-        animation-duration: 1s;
-
-    }
-
-}
 
 
 
