--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -5,7 +5,7 @@ body {
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
-    color: $color-gray;
+    color: $color-grey-dark;
     padding: 3rem;
     box-sizing: border-box; // where to put it
 
@@ -47,7 +47,7 @@ body {
 
 .heading-secondary {
     font-size: 3.5rem;
-    text-transform: uppsercase;
+    text-transform: uppercase;
     font-weight: 700;
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
 
