--- a/Natours/starter/sass/base/_utilities.scss
+++ b/Natours/starter/sass/base/_utilities.scss
@@ -1,6 +1,5 @@
-.u-ceter-text {
-    text-align: center;
-}
+.u-center-text { text-align: center !important; }
+
 .u-margin-bottom-big {
     margin-bottom: 8rem;
 }
@@ -11,4 +10,7 @@
 
 .u-margin-bottom-small {
     margin-bottom: 1.5rem;
+}
+.u-margin-top-big {
+    margin-top: 8rem;
 }
