--- a/Natours/starter/sass/components/_button.scss
+++ b/Natours/starter/sass/components/_button.scss
@@ -38,10 +38,19 @@
 
     &--white {
         background-color: $color-white;
-        color: $color-gray;
+        color: $color-grey-dark;
         padding: 15px 40px;
         &::after {
             background-color: $color-white;
+        }
+    }
+
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+        padding: 15px 40px;
+        &::after {
+            background-color: $color-primary;
         }
     }
 
