--- a/Natours/starter/sass/layout/_header.scss
+++ b/Natours/starter/sass/layout/_header.scss
@@ -10,7 +10,7 @@
     background-position: top;
 
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     position: relative;
 
     &__logo-box {
