--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 
 .section-about {
-    background-color: $color-gray-light-1;
+    background-color: $color-grey-light-1;
     padding: 25em;
     margin-top: -20vh;
 }
@@ -23,4 +23,10 @@
     & > * { 
         transform: skewY(7deg);
     }
+}
+
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 25em 0 50rem 0;
+    margin-top: -10rem;
 }
