--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -27,6 +27,40 @@
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 25em 0 50rem 0;
+    padding: 20em 0 10rem 0;
     margin-top: -10rem;
+    height: 95vh;
+}
+
+.section-stories {
+    
+    padding: 15rem 0;
+    // background-color: $color-grey-light-1;
+    position: relative;
+
+}
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+}
+
+.book {
+    background-image: linear-gradient(105deg, rgba($color-white, 0.9) 0%,
+                                              // 这两个颜色都需要设置一个作为白色的终止点，一个作为背景图的开位置
+                                              rgba($color-white, 0.9) 50%,
+                                              transparent 50%  
+        ), url(../img/nat-10.jpg);
+    background-size: 100%;
+    // 构造shape
+
+    border-radius: 3px;
+    box-shadow: 0 1.5rem  4rem rgba($color: $color-black, $alpha: 0.2);
+    height: 50rem;
+
+    &__form {
+        width: 50%;
+        padding: 6rem;
+        
+    }
 }
