--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -14,3 +14,59 @@
     transform: translate(-50%, -50%);
     
 }
+
+// Media query manager
+
+/*
+0-600px: phone
+600-900px: tablet portrait
+900-1200px: tablet landscape
+[1200-1800px] where normal styles apply
+1800px+ big desktop
+*/
+
+// ems are the best option for media queries
+// 1 em == 16px
+
+
+// @mixin respond-phone {
+//     @media (max-width: 600px) {
+//         @content
+//     };
+// }
+
+/* $breakpoint argument choices
+- phone
+- tablet port
+- tablet land
+- big desktop
+*/
+
+/**
+    order: 
+
+    1. base + typography -> general layout +grid > payge layout > components
+     
+*/
+@mixin respond($breakpint) {
+  @if $breakpint == phone {
+    @media (max-width: 37.5em) { //600px
+        @content
+    };
+  }
+  @if $breakpint == tab-port {
+    @media (max-width: 56.25em) { //900px
+        @content
+    };
+  }
+  @if $breakpint == tab-land {
+    @media (max-width: 75em) { //1200px
+        @content
+    };
+  }
+  @if $breakpint == big-desktop {
+    @media (min-width: 112.5em) { //1800px
+        @content
+    };
+  }  
+}
