--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -8,11 +8,43 @@
  
 }
 
+// ems are the best option for media queries
+// 1 em == 16px
+
 html {
-    font-size: 62.5%;
+    font-size: 62.5%;  // 1rem == 10px; 10px / 16 = 62.5%;
+
+    // fit for different resolutions
+    // @include respond-phone {
+    //     font-size: 50%;
+    // }
+
+    // @include respond(phone) {
+    //     font-size: 50%;
+    // }
+
+
+    // tab-land tab-port 有冲突。。
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1 rem = 9px; 9/16 = 0.5
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%;  // 1rem = 8px; 8/16 = 0.5
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%; // 1em = 12x; 12/16;
+    }
+
 }
 
-box {
+body {
     box-sizing: border-box;
-    
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+        
+    }
 }
