--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -6,7 +6,7 @@ body {
     /* font-size: 16px; */
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
+    // padding: 3rem; // why this affects the padding
     box-sizing: border-box; // where to put it
 
 }
@@ -31,7 +31,13 @@ body {
         /* animation-delay: 1s; */
         /* animation-iteration-count: 3; */
         animation-timing-function: ease-out;
-    }
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+
+        }
+    }   
 
     &--sub {
         display: block;
@@ -40,7 +46,12 @@ body {
         letter-spacing: 1.75rem;  
         animation-name: moveInRight;
         animation-duration: 1s;
-
+        
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+            font-family: 5rem;
+            
+        }
     }
 
 }
@@ -57,6 +68,17 @@ body {
     letter-spacing: 2px;
     // important
     transition: all .2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+        
+    }
+
 
     &:hover {
         transform: skewY((2deg)) skewX(10deg) scale(1.1);
