--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -103,7 +103,8 @@
         transition: all 0.5s ease;
         width: 100%;
         backface-visibility: hidden; // 如果旋转180， 那么隐藏这个元素
-         
+        -webkit-background-color: rgba($color-black, 0.8);
+
         position: absolute; // this takes out the element off the natural float, thus perspective not working 
         height: 50rem;
 
@@ -173,5 +174,62 @@
     &__price-value {
         font-size: 6rem;
         font-weight: 500;
+    }
+
+    @include respond(tab-port) {
+
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+
+        &__side {
+
+            height: auto;
+            position: relative; // this takes out the element off the natural float, thus perspective not working 
+            box-shadow: none;
+
+            &--back {
+                transform: rotateY(0);
+
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+
+        &:hover  &__side--front {
+            transform: rotateY(0);
+        }
+        
+        &:hover  &__side--back {
+            transform: rotateY(0);
+        }
+
+        &__cta {
+            position: relative;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            padding: 7rem 4rem 4rem;
+
+            transform: translate(0);
+
+
+        }
+
+        &__price-box {
+            margin-bottom: 3rem;
+        }
+
+        &__price-only {
+            font-size: 1.4rem;
+            text-transform: uppercase;
+        }
+
+        &__price-value {
+            font-size: 4rem;
+        }
+        
+
     }
 }
