--- a/Natours/starter/sass/components/_feature-box.scss
+++ b/Natours/starter/sass/components/_feature-box.scss
@@ -8,6 +8,11 @@
     
     transition: transform 0.3s;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+
+    }
+    
     &__icon {
         font-size: 6rem;
         margin-bottom: 5rem;
@@ -17,6 +22,12 @@
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
         color: transparent; 
+
+        @include respond(tab-port) {
+            margin: 0;
+    
+        }
+        
     }
 
     &:hover {
