--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -1,12 +1,24 @@
+// 主要的两个breakpoint to be responsive
+// 1. tablet in portrait 2. phoen
+
 .footer {
     background-color: $color-grey-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
+    color: $color-grey-light-1;
+
+    @include respond(tab-port) {
+        padding: 8rem 0;
+
+    }
 
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
-
+        @include respond(tab-port) {
+           margin-bottom: 6rem;
+           
+        }
     }
 
     &__logo {
@@ -18,6 +30,11 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block; // inline-block不会占据整个空间，而只会包裹内容的长度， 这样能够保证上边框刚好覆盖ul列表，不多不少
+        
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -61,5 +78,11 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
+
     }
 }
