--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -19,6 +19,16 @@
 
         text-align: center;
 
+        @include respond(tab-port) {
+            top: 4rem;
+            right:4rem;
+        }
+
+        @include respond(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
+
     }
 
     &__background {
@@ -35,6 +45,16 @@
 
         // transform: scale(80); // 渐变的颜色
         transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+        
+        @include respond(tab-port) {
+            top: 4.5rem;
+            right:4.5rem;
+        }
+
+        @include respond(phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
 
     }
 
