--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -3,6 +3,10 @@
     background-color: $color-grey-light-1;
     padding: 25em;
     margin-top: -20vh;
+
+    @include respond(tab-port) {
+        padding: 20em 0;
+    }
 }
 
 .section-features {
@@ -23,13 +27,23 @@
     & > * { 
         transform: skewY(7deg);
     }
+
+    @include respond(tab-port) {
+        padding: 10em 0;
+    }
+
 }
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 20em 0 10rem 0;
+    padding: 25em 0 15rem 0;
     margin-top: -10rem;
-    height: 95vh;
+    // height: 95vh;
+
+    @include respond(tab-port) {
+        padding: 20em 0 10 rem 0;
+    }
+
 }
 
 .section-stories {
@@ -38,6 +52,9 @@
     // background-color: $color-grey-light-1;
     position: relative;
 
+    @include respond(tab-port) {
+        padding: 10em 0;
+    }
 }
 
 .section-book {
@@ -56,11 +73,38 @@
 
     border-radius: 3px;
     box-shadow: 0 1.5rem  4rem rgba($color: $color-black, $alpha: 0.2);
-    height: 50rem;
+
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, rgba($color-white, 0.9) 0%,
+                // 这两个颜色都需要设置一个作为白色的终止点，一个作为背景图的开位置
+                rgba($color-white, 0.9) 65%,
+                transparent 65%  
+        ), url(../img/nat-10.jpg);
+
+        background-size: cover;
+
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right, rgba($color-white, 0.9) 0%,
+                // 这两个颜色都需要设置一个作为白色的终止点，一个作为背景图的开位置
+                rgba($color-white, 0.9) 0%,
+                rgba($color-white, 0.9) 100%
+        ), url(../img/nat-10.jpg);
+
+        background-size: cover;
+
+    }
+
 
     &__form {
         width: 50%;
         padding: 6rem;
-        
+        @include respond(tab-land) {
+            width: 65%;
+        }
+        @include respond(tab-land) {
+            width: 100%;
+        }
     }
 }
