--- a/Natours/starter/css/style.comp.css
+++ b/Natours/starter/css/style.comp.css
@@ -53,6 +53,10 @@ body {
     body {
       padding: 0; } }
 
+::selection {
+  background-color: #55c57a;
+  color: #fff; }
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -414,7 +418,7 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 500; }
-  @media (max-width: 56.25em) {
+  @media only screen and (max-width: 56.25rem), only screen and (hover: none) {
     .card {
       height: auto;
       border-radius: 3px;
