--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -45,6 +45,12 @@ body {
 
     @include respond(tab-port) {
         padding: 0;
-        
+
     }
+}
+
+::selection {
+    background-color: $color-primary;
+    color: $color-white;
+    
 }
