--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -176,7 +176,8 @@
         font-weight: 500;
     }
 
-    @include respond(tab-port) {
+    @media only screen and (max-width: 56.25rem),
+    only screen and (hover: none) {
 
         height: auto;
         border-radius: 3px;
