--- a/Trillo/starter/sass/_base.scss
+++ b/Trillo/starter/sass/_base.scss
@@ -19,7 +19,17 @@ Grey dark 3: #999
      --color-primary: #eb2f64;
      --color-primary-light: #FF3366;
      --color-primary-dark: #BA265D;
-}
+
+    --color-grey-light-1: #faf9f9;
+    --color-grey-light-2: #f4f2f2;
+    --color-grey-light-3: #f0eeee;
+    --color-grey-light-4: #ccc;
+    --color-grey-dark-1: #333;
+    --color-grey-dark-2: #777;
+    --color-grey-dark-3: #999;
+
+    --shadow-dark:  0 2rem 6rem rgba(0, 0, 0, 0.3);
+    }
 
 * {
     margin: 0;
@@ -31,17 +41,23 @@ body {
     font-weight: 400;
     line-height: 1.6;
 
+    color: var(--color-grey-dark-2);
+
     background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
     background-size: cover;
+    background-repeat: no-repeat;;
+    
+    min-height: 100vh;
 }
 
 html {
     box-sizing: border-box;   
+    font-size: 90%; // i rem == 10px; 10/16
+
 }
 
 *,
 *::before,
 *::after {
     box-sizing: inherit;
-    font-size: 62.5%; // i rem == 10px; 10/16
 }
