--- a/Trillo/starter/sass/_base.scss
+++ b/Trillo/starter/sass/_base.scss
@@ -29,6 +29,10 @@ Grey dark 3: #999
     --color-grey-dark-3: #999;
 
     --shadow-dark:  0 2rem 6rem rgba(0, 0, 0, 0.3);
+    --shadow-light:  0 2rem 5rem rgba(0, 0, 0, 0.08);
+    
+    --line: 1px solid var(--color-grey-light-2);
+
     }
 
 * {
@@ -60,4 +64,8 @@ html {
 *::before,
 *::after {
     box-sizing: inherit;
+}
+
+ul {
+    list-style-type: none;
 }
