--- a/Trillo/starter/sass/_layout.scss
+++ b/Trillo/starter/sass/_layout.scss
@@ -10,7 +10,7 @@
 .header {
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-2);
+    border-bottom: var(--line);
 
     // below are all flex box content
     display: flex;
@@ -28,12 +28,50 @@
     // 使用 flex 4元表达式
     flex: 0 0 18%;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; // two elements are pushed to two sides completely
 }
 
 .hotel-view {
     background-color: #fff;
-    background-color: orangered;
+    // background-color: orangered;
     flex: 1; // flex-grow grow as much as it can
 
+    // height: 80rem; // temp 
 
 }
+
+
+.detail {
+    font-size: 1.4rem;
+
+    display: flex;
+
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+
+}
+
+.description {
+    
+    background-color: #fff;
+    box-shadow:var(--shadow-light);
+    padding: 3rem;
+
+    flex: 0 0 60%;
+
+    margin-right: 4.5rem;
+    
+}
+
+.user-reviews {
+    flex: 1;
+     
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+        
+}
+
