--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -12,6 +12,13 @@
     align-items: center;
     justify-content: center;
 
+    @media only screen and (max-width: $bp-small){
+        order: 1;
+        // wrap to a new line if not enough space
+        flex: 0 0 100%;
+        background-color: var(--color-grey-light-2);
+        width: 80%;
+    }
     &__input {
         font-family: inherit;
         font-size: inherit;
@@ -131,13 +138,28 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    // use medium query
+    @media only screen and (max-width: $bp-large){
+        display: flex;
+        margin: 0;
+    }
 
     &__item {
         position: relative;
 
         &:not(:last-child) {
             margin-bottom: 0.5rem;
+            @media only screen and (max-width: $bp-large){
+                margin: 0; // clear margin in here
+    
+            }
         }
+
+        @media only screen and (max-width: $bp-large){
+            flex: 1; // grow as much as they can
+
+        }
+        
     }
 
     &__item::before {
@@ -187,6 +209,18 @@
 
          z-index: 100;
          position: relative; // z index only works if set position
+
+         @media only screen and (max-width: $bp-large){
+            justify-content: center;
+            padding: 2rem;
+
+        }
+        @media only screen and (max-width: $bp-medium){
+            flex-direction: column;
+            padding: 1.5rem 0.5rem;
+
+        }
+
     }
 
     &__link:hover {
@@ -201,6 +235,13 @@
 
         margin-right: 2rem;
         fill: currentColor; // color of itself or parent's color
+
+        @media only screen and (max-width: $bp-medium){
+            margin-right: 0rem;
+            widows: 1.5rem;
+            height: 1.5rem;
+        }
+
     }
 }
 
@@ -209,6 +250,12 @@
     text-align: center;
     color: var(--color-grey-light-4);
     padding: 2.5rem;
+
+    @media only screen and (max-width: $bp-large){
+        display: none;
+        // margin: 0;
+    }
+    
 
 }
 
@@ -240,6 +287,12 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+
+        @media only screen and (max-width: $bp-medium){
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        
+        }
 
     }
 
@@ -280,18 +333,30 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        @media only screen and (max-width: $bp-medium){
+            padding: 0 1.5rem;
+        
+        }
 
     }
 
     &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
+        @media only screen and (max-width: $bp-medium){
+            font-size: 1.8rem;
+        
+        }
     }
 
     &__rating-count {
         font-size: 0.8rem;
         text-transform: uppercase;
 
+        @media only screen and (max-width: $bp-medium){
+            font-size: 0.5rem;
+        
+        }
     }
 
 }
@@ -378,7 +443,7 @@
 
     }
 
-    &__item:before {
+    &__item::before {
         //  必须以下的都用上, 才能画出来
         content: "";
         display: inline-block;
@@ -416,6 +481,7 @@
     }
 
     &__friends {
+        display: flex;
 
     }
 
@@ -429,7 +495,7 @@
         border: 3px solid white;
         
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
 
         }
     }
@@ -444,6 +510,20 @@
     position: relative;
 
     overflow: hidden; // 一旦icon 超出边界
+
+    @media only screen and (max-width: $bp-large){
+        padding: 2rem;
+        margin-bottom: 2rem;
+        margin-right: 2rem;
+
+    }
+
+    @media only screen and (max-width: $bp-medium){
+        // padding: 2rem;
+        margin-right: 0rem;
+        margin-bottom: 3rem;
+
+    }
 
     &__text {
         margin-bottom: 2rem;
@@ -503,5 +583,90 @@
         color: var(--color-grey-light-2);
         font-family: sans-serif;
         z-index: 5;
+    }
+}
+
+// call to action
+.cta {
+    padding: 3.5rem 0;
+    text-align: center;
+
+    &__book-now {
+        font-size: 1.5rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+
+    }
+}
+
+
+.btn {
+    font-size: 1.5rem;
+    border: none;
+    text-transform: uppercase;
+    border-radius: 100px;
+    border: none;
+
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: #fff;
+    position: relative;
+
+    overflow: hidden;  // hide automatically;
+
+    cursor: pointer;
+
+    & > * {
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all 0.2s;
+
+    }
+
+    &__visible {
+        // display: inline-block;
+        padding: 2rem 7.5rem;
+
+    }
+
+    &__invisible {
+        
+        position: absolute;
+        left: 0;
+        top: -100%;
+        padding: 2rem 0rem;
+        
+    }
+
+    // &:hover {
+    //     // 以下这个表达式没对..
+    //     // &__visible {
+
+    //     // }
+
+    //     // &__invisible {
+    //     //     top: 0;
+    //     // }
+    // }
+
+    &:hover {
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+
+    }
+
+    &:hover &__visible {
+        // top: 100%;
+        transform: translateY(100%);
+    }
+
+    &:hover &__invisible {
+        top: 0;
+
+    }
+
+    &:focus {
+        outline: none;
+        animation:  pulstate 1s infinite;
     }
 }
